--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "coverage": "istanbul check-coverage --statements 100 --functions 100 --branches 100 --lines 100",
     "doc": "jsdoc --configure JSDoc/conf.json --destination doc README.md lib",
     "doc:watch": "watch 'npm run doc' lib",
-    "integration": "cd test/integration; docker-compose run test",
     "lint": "eslint lib test",
     "outdated": "ncu --error-level 2",
     "publish": "publish",
-    "test": "istanbul cover _mocha",
-    "test:all": "npm run outdated && npm run lint && npm test && npm run coverage && npm run integration"
+    "pretest": "npm run outdated && npm run lint",
+    "test": "npm run test:unit && npm run test:integration",
+    "test:unit": "istanbul cover _mocha",
+    "test:integration": "cd test/integration; docker-compose run test",
+    "posttest": "npm run coverage"
   },
   "repository": {
     "type": "git",
