Check for outdated dependencies only on publish.
Don't use "prepublish" because of https://github.com/npm/npm/issues/10074.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "doc:watch": "watch 'npm run doc' lib",
     "lint": "eslint lib test",
     "outdated": "ncu --error-level 2",
-    "publish": "publish",
-    "pretest": "npm run outdated && npm run lint",
+    "publish": "npm run outdated && publish",
+    "pretest": "npm run lint",
     "test": "npm run test:unit && npm run test:integration",
     "test:unit": "istanbul cover _mocha",
     "test:integration": "cd test/integration; docker-compose run test",
