--- a/package.json
+++ b/package.json
@@ -50,5 +50,6 @@
     "bluebird": "^3.1.1",
     "lodash": "^4.0.0",
     "request-promise": "^2.0.0"
-  }
+  },
+  "bundledDependencies": ["bluebird", "lodash", "request-promise"]
 }
