--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eris-keys",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "a JavaScript client library for eris-keys",
   "main": "lib/index.js",
   "scripts": {
@@ -51,5 +51,9 @@
     "lodash": "^4.0.0",
     "request-promise": "^2.0.0"
   },
-  "bundledDependencies": ["bluebird", "lodash", "request-promise"]
+  "bundledDependencies": [
+    "bluebird",
+    "lodash",
+    "request-promise"
+  ]
 }
