Add ‘Monax’ keyword to package.json.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/eris-ltd/eris-keys.js#README.md",
   "keywords": [
     "Eris",
+    "Monax",
     "blockchain",
     "contracts",
     "keys",
