--- a/package.json
+++ b/package.json
@@ -7,25 +7,25 @@
     "url": "https://github.com/eris-ltd/eris-keys.js/issues"
   },
   "dependencies": {
-    "bluebird": "^3.4.0",
-    "lodash": "^4.13.1",
-    "request-promise": "^3.0.0"
+    "bluebird": "3.4.0",
+    "lodash": "4.13.1",
+    "request-promise": "3.0.0"
   },
   "devDependencies": {
-    "bundle-dependencies": "^1.0.2",
-    "ed25519-supercop": "^1.0.2",
-    "husky": "^0.11.4",
-    "istanbul": "^0.4.3",
-    "jsdoc": "^3.4.0",
-    "mocha": "^2.5.3",
-    "nock": "^8.0.0",
-    "npm-check-updates": "^2.6.7",
-    "pegjs": "^0.9.0",
-    "publish": "^0.6.0",
-    "rewire": "^2.5.1",
-    "seed-random": "^2.2.0",
-    "standard": "^7.1.2",
-    "watch": "^0.18.0"
+    "bundle-dependencies": "1.0.2",
+    "ed25519-supercop": "1.0.2",
+    "husky": "0.11.4",
+    "istanbul": "0.4.3",
+    "jsdoc": "3.4.0",
+    "mocha": "2.5.3",
+    "nock": "8.0.0",
+    "npm-check-updates": "2.6.7",
+    "pegjs": "0.9.0",
+    "publish": "0.6.0",
+    "rewire": "2.5.1",
+    "seed-random": "2.2.0",
+    "standard": "7.1.2",
+    "watch": "0.18.0"
   },
   "homepage": "https://github.com/eris-ltd/eris-keys.js#README.md",
   "keywords": [
