CircleCI: Test against new version of Eris CLI.

--- a/circle.yml
+++ b/circle.yml
@@ -13,13 +13,12 @@ machine:
 dependencies:
   pre:
     # Install Docker Machine because CircleCI's Docker support is hobbled.
-    - curl -L https://github.com/docker/machine/releases/download/$DOCKER_MACHINE_VERSION/docker-machine-`uname -s`-`uname -m` > $HOME/bin/docker-machine && chmod +x $HOME/bin/docker-machine
+    - "curl -L https://github.com/docker/machine/releases/download/$DOCKER_MACH\
+      INE_VERSION/docker-machine-`uname -s`-`uname -m` > $HOME/bin/docker-machi\
+      ne && chmod +x $HOME/bin/docker-machine"
 
     # Install the Eris CLI.
-    - sudo apt-key adv --keyserver hkp://pool.sks-keyservers.net --recv-keys DDA1D0AB
-    - sudo su -c "echo deb https://apt.eris.industries $DISTRIBUTION main > /etc/apt/sources.list.d/eris.list"
-    - sudo apt-get --quiet update
-    - sudo apt-get install --assume-yes --quiet eris
+    - ./CircleCI/CLI.sh
 
 test:
   pre:
