--- a/package.json
+++ b/package.json
@@ -7,25 +7,26 @@
     "url": "https://github.com/eris-ltd/eris-keys.js/issues"
   },
   "dependencies": {
-    "bluebird": "3.4.0",
-    "lodash": "4.13.1",
-    "pegjs": "0.9.0",
-    "request-promise": "3.0.0"
+    "bluebird": "3.4.7",
+    "lodash": "4.17.4",
+    "pegjs": "0.10.0",
+    "request": "2.79.0",
+    "request-promise": "4.1.1"
   },
   "devDependencies": {
     "bundle-dependencies": "1.0.2",
     "ed25519-supercop": "1.0.2",
-    "husky": "0.11.4",
-    "istanbul": "0.4.3",
-    "jsdoc": "3.4.0",
-    "mocha": "2.5.3",
-    "nock": "8.0.0",
-    "npm-check-updates": "2.6.7",
+    "husky": "0.12.0",
+    "istanbul": "0.4.5",
+    "jsdoc": "3.4.3",
+    "mocha": "3.2.0",
+    "nock": "9.0.2",
+    "npm-check-updates": "2.8.9",
     "publish": "0.6.0",
-    "rewire": "2.5.1",
+    "rewire": "2.5.2",
     "seed-random": "2.2.0",
-    "standard": "7.1.2",
-    "watch": "0.18.0"
+    "standard": "8.6.0",
+    "watch": "1.0.1"
   },
   "homepage": "https://github.com/eris-ltd/eris-keys.js#README.md",
   "keywords": [
