--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "mocha": "3.2.0",
     "nock": "9.0.2",
     "npm-check-updates": "2.8.9",
-    "publish": "0.6.0",
     "rewire": "2.5.2",
     "seed-random": "2.2.0",
     "standard": "8.6.0",
@@ -50,7 +49,7 @@
     "outdated": "ncu --error-level 2",
     "posttest": "istanbul check-coverage --statements 100 --functions 100 --branches 100 --lines 100",
     "precommit": "standard",
-    "publish": "npm run outdated && bundle-dependencies update && publish",
+    "publish": "npm run outdated && bundle-dependencies update && npm publish",
     "test": "npm run unit && npm run integration",
     "unit": "istanbul cover _mocha -- test/unit"
   },
