--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "bluebird": "3.4.7",
     "lodash": "4.17.4",
+    "mz": "2.6.0",
     "pegjs": "0.10.0",
+    "ramda": "0.23.0",
     "request": "2.79.0",
     "request-promise": "4.1.1"
   },
