--- a/circle.yml
+++ b/circle.yml
@@ -9,10 +9,6 @@ machine:
 
 dependencies:
   pre:
-    # CircleCI uses an old version of npm.
-    - npm install --global npm
-    - npm --version
-
     # Install Docker Machine because CircleCI's Docker support is hobbled.
     - "curl -L https://github.com/docker/machine/releases/download/$DOCKER_MACH\
       INE_VERSION/docker-machine-`uname -s`-`uname -m` > $HOME/bin/docker-machi\
@@ -29,6 +25,8 @@ test:
     - docker-machine create --driver digitalocean default
     - eval $(docker-machine env default); ERIS_PULL_APPROVE=true eris init
   override:
+    - npm run precommit
+    - npm run outdated
     - eval $(docker-machine env default); npm test
   post:
     - docker-machine rm -y default
@@ -37,6 +35,7 @@ deployment:
   npm:
     branch: master
     commands:
-      - printf "$NPM_USERNAME\n$NPM_PASSWORD\n$NPM_EMAIL\n" | npm login
-      - npm run publish
       - JSDoc/publish.sh
+      - npm run bundle
+      - printf "$NPM_USERNAME\n$NPM_PASSWORD\n$NPM_EMAIL\n" | npm login
+      - npm publish
