--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "standard": "8.6.0",
     "watch": "1.0.1"
   },
+  "engines": {
+    "node": ">=6"
+  },
   "homepage": "https://github.com/eris-ltd/eris-keys.js#README.md",
   "keywords": [
     "Eris",
