--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "keys",
     "ledger"
   ],
-  "license": "GPL-3.0",
+  "license": "LGPL-3.0",
   "main": "lib/index.js",
   "repository": {
     "type": "git",
